--- a/app/blocks/section/nd-section.scss
+++ b/app/blocks/section/nd-section.scss
@@ -1437,6 +1437,12 @@
       }
     }
 
+    &_sm-mt15 {
+      &:not(:first-child) {
+        @include rule(margin-top, (sm: 15));
+      }
+    }
+
     .filter-section {
       width: 100%;
       flex: none;
