--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -273,3 +273,4 @@ $icon-location: url('../images/bg/bg-search-location.svg');
 $icon-type: url('../images/bg/bg-search-type.svg');
 $icon-type2: url('../images/bg/bg-search-type-cube.svg');
 $icon-filter: url('../images/bg/bg-filter.svg');
+$icon-small-burger-blue: url('../images/bg/bg-small-burger-blue.svg');
