--- a/app/blocks/form-elements/nd-range.scss
+++ b/app/blocks/form-elements/nd-range.scss
@@ -11,27 +11,29 @@
     display: inline-block;
     width: 100%;
     box-sizing: border-box;
-    padding: 0 7px;
+    padding: 0 12px;
     box-shadow: none;
     outline: none;
     border: none;
     border-radius: 0;
     background: transparent;
 
+    @include rule(height, (xl: 24px, xlg: 24, lg: 24, md: 24, sm: 24));
+
     @include screen('xlg', max, 2) {
-      padding: 0 pxtovw(7, 1660);
+      padding: 0 pxtovw(12, 1660);
     }
 
     @include screen('lg', max, 2) {
-      padding: 0 pxtovw(7, 1366);
+      padding: 0 pxtovw(12, 1366);
     }
 
     @include screen('md', max, 2) {
-      padding: 0 pxtovw(7, 960);
+      padding: 0 pxtovw(12, 960);
     }
 
     @include screen('sm', max, 2) {
-      padding: 0 pxtovw(7, 375);
+      padding: 0 pxtovw(12, 375);
     }
 
     &::before {
@@ -74,22 +76,22 @@
     align-items: center;
 
     &:not(:first-child) {
-      margin-top: 33px;
+      margin-top: 35px;
 
       @include screen('xlg', max, 2) {
-        margin-top: pxtovw(33, 1660);
+        margin-top: pxtovw(35, 1660);
       }
 
       @include screen('lg', max, 2) {
-        margin-top: pxtovw(33, 1366);
+        margin-top: pxtovw(35, 1366);
       }
 
       @include screen('md', max, 2) {
-        margin-top: pxtovw(33, 960);
+        margin-top: pxtovw(35, 960);
       }
 
       @include screen('sm', max, 2) {
-        margin-top: pxtovw(31, 375);
+        margin-top: pxtovw(35, 375);
       }
     }
   }
@@ -165,30 +167,30 @@
     background-color: $nd-color-gray2;
     position: relative;
     border-radius: 3px;
-    margin: 7px 0; // margin нужен, чтобы handler не налезал на другие элементы
+    margin: 10px 0; // margin нужен, чтобы handler не налезал на другие элементы
 
     @include screen('xlg', max, 2) {
       height: pxtovw(4, 1660);
       border-radius: pxtovw(3, 1660);
-      margin: pxtovw(7, 1660) 0;
+      margin: pxtovw(10, 1660) 0;
     }
 
     @include screen('lg', max, 2) {
       height: pxtovw(4, 1366);
       border-radius: pxtovw(3, 1366);
-      margin: pxtovw(7, 1366) 0;
+      margin: pxtovw(10, 1366) 0;
     }
 
     @include screen('md', max, 2) {
       height: pxtovw(4, 960);
       border-radius: pxtovw(3, 960);
-      margin: pxtovw(7, 960) 0;
+      margin: pxtovw(10, 960) 0;
     }
 
     @include screen('sm', max, 2) {
       height: pxtovw(4, 375);
       border-radius: pxtovw(3, 375);
-      margin: pxtovw(7, 375) 0;
+      margin: pxtovw(10, 375) 0;
     }
   }
 
@@ -222,38 +224,38 @@
 
   &-handle {
     position: absolute;
-    width: 14px;
-    height: 14px;
+    width: 24px;
+    height: 24px;
     top: 50%;
     transform: translate3d(-50%, -50%, 0);
     border-radius: 50%;
-    background-color: $nd-color-basic;
+    background-color: $nd-color-main;
     box-sizing: border-box;
     transition: border $ease-main;
     cursor: pointer;
     box-shadow: none;
-    border-color: black;
+    border-color: $nd-color-main;
 
-    @include rule(right, (xl: -14px, xlg: -14, lg: -14, md: -14, sm: -14));
+    @include rule(right, (xl: -24px, xlg: -24, lg: -24, md: -24, sm: -24));
 
     @include screen('xlg', max, 2) {
-      height: pxtovw(14, 1660);
-      width: pxtovw(14, 1660);
+      height: pxtovw(24, 1660);
+      width: pxtovw(24, 1660);
     }
 
     @include screen('lg', max, 2) {
-      height: pxtovw(14, 1366);
-      width: pxtovw(14, 1366);
+      height: pxtovw(24, 1366);
+      width: pxtovw(24, 1366);
     }
 
     @include screen('md', max, 2) {
-      height: pxtovw(14, 960);
-      width: pxtovw(14, 960);
+      height: pxtovw(24, 960);
+      width: pxtovw(24, 960);
     }
 
     @include screen('sm', max, 2) {
-      height: pxtovw(14, 375);
-      width: pxtovw(14, 375);
+      height: pxtovw(24, 375);
+      width: pxtovw(24, 375);
     }
 
     &::before, &::after {
@@ -261,7 +263,9 @@
     }
 
     &:hover {
-      border-color: white;
+      @include screen('sm', min, 2) {
+        border-color: white;
+      }
     }
   }
 
