--- a/app/blocks/space-type/space-type.scss
+++ b/app/blocks/space-type/space-type.scss
@@ -213,6 +213,10 @@
     }
   }
 
+  &_fz12 {
+    @include rule(font-size, (xl: 12px, xlg: 12, lg: 12, md: 12, sm: 12));
+  }
+
   &_fz13 {
     font-size: 13px;
     line-height: 1;
@@ -376,6 +380,27 @@
 
       @include screen('sm', max, 2) {
         font-size: pxtovw(12, 375);
+      }
+    }
+  }
+
+  .nd-space_single-offer & {
+
+    #{$b} {
+      &__box {
+        @include rule(width, (xl: 9px, xlg: 9, lg: 7, md: 9, sm: 9));
+        @include rule(height, (xl: 9px, xlg: 9, lg: 7, md: 9, sm: 9));
+
+        &:not(:last-child) {
+          @include rule(margin-right, (xl: 7px, xlg: 7, lg: 6, md: 7, sm: 7));
+        }
+      }
+
+      &__name {
+        @include rule(font-size, (xl: 12px, xlg: 12, lg: 10, md: 12, sm: 12));
+
+        font-weight: 700;
+        font-family: $font-main;
       }
     }
   }
