--- a/app/components/results/nd-results.scss
+++ b/app/components/results/nd-results.scss
@@ -192,6 +192,10 @@
         width: 100%;
       }
     }
+
+    &_mt23 {
+      @include rule(margin-top, (xl: 23px,xlg: 23, lg: 23, md: 23, sm: 23));
+    }
   }
 
   &_v2 {
@@ -202,7 +206,7 @@
     padding-top: 0;
 
     &:not(:first-child) {
-      @include rule(margin-top, (xl: 25px, xlg: 25, lg: 13, md: -30, sm: 15));
+      @include rule(margin-top, (xl: 25px, xlg: 25, lg: 13, md: 0, sm: 40));
     }
 
     #{$b} {
@@ -210,6 +214,12 @@
       &__item {
         padding-left: 0;
         padding-right: 0;
+
+        @include rule(margin-top, (sm: 23));
+
+        &:first-child {
+          @include rule(margin-top, (md: 0));
+        }
       }
     }
   }
