--- a/app/components/user-menu-panel/nd-user-menu-panel.pug
+++ b/app/components/user-menu-panel/nd-user-menu-panel.pug
@@ -44,7 +44,7 @@ mixin nd-user-menu-panel(host, noUser, isSearch)
                   path(d="M13.9185 17.9469C13.7217 17.9469 13.5343 17.8731 13.3843 17.7347C13.0937 17.4487 13.0937 16.9781 13.3843 16.692L19.6453 10.5282C19.9358 10.2422 20.4139 10.2422 20.7044 10.5282C20.995 10.8143 20.995 11.2849 20.7044 11.5709L14.4434 17.7347C14.3028 17.8731 14.1154 17.9469 13.9185 17.9469Z" fill="#0085FF")
       else if isSearch
         +e.LI.item_filter
-          +e.A.link.js-toggle-modal(href="#" data-modal-target="filter-range")
+          +e.A.link.js-toggle-modal(href="#" data-modal-target="filter-range" data-modal-user-panel="visible")
             +nd-user-link('', '', '', 'div')
               +e.SVG.icon_filter(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23.8 21.1")
                 path(d="M21.25,4.2H7.35a.65.65,0,0,1,0-1.3h13.9a.65.65,0,1,1,0,1.3Z")
@@ -55,7 +55,7 @@ mixin nd-user-menu-panel(host, noUser, isSearch)
                 path(d="M20.25,14.3a3.55,3.55,0,0,1-3.55-3.55A3.69,3.69,0,0,1,17.84,8.1a3.3,3.3,0,0,1,2.45-.9h0a3.55,3.55,0,0,1,0,7.1Zm-.13-5.8a2,2,0,0,0-1.39.55,2.37,2.37,0,0,0-.73,1.7A2.25,2.25,0,1,0,20.25,8.5Z" fill="#0085ff")
             +e.text Filter
         +e.LI.item
-          +e.A.link.js-toggle-modal(href="#" data-modal-target="filter-sort")
+          +e.A.link.js-toggle-modal(href="#" data-modal-target="filter-sort" data-modal-user-panel="visible")
             +nd-user-link('', '', '', 'div')
               +e.SVG.icon_sort(viewBox="0 0 22.3 17.78" fill="none" xmlns="http://www.w3.org/2000/svg")
                 path(d="M4.85,16.38a.66.66,0,0,1-.65-.66V.72a.65.65,0,1,1,1.3,0v15A.66.66,0,0,1,4.85,16.38Z")
