--- a/app/pages/search/search-v2.pug
+++ b/app/pages/search/search-v2.pug
@@ -77,7 +77,7 @@ block content
                 +e.INPUT.input(type="radio", value=item.value, name=item.name, data-modal-item, data-modal-item-value=item.value2, data-modal-item-wrapper-class=item.wrapClass data-modal-item-type="offer")
       +modal({header: {title: 'Team size'}, describe: 'Start-up, scale-up, big business or just you – we have a perfect match for you.', footer: false})#filter-team
         +e.list
-          each item in [{title: '1', value: '1', name: 'team', value2: '1'}, {title: '2 — 4', value: '2 — 4', name: 'team'}, {title: '5 — 7', value: '5 — 7', name: 'team'}, {title: '8 — 10', value: '8 — 10', name: 'team'}, {title: '11 — 15', value: '11 — 15', name: 'team'}, {title: '16 — 20', value: '16 — 20', name: 'team'}, {title: '21 — 30', value: '21 — 30', name: 'team'}, {title: '31+', value: '31+', name: 'team', value2: '31+'} ]
+          each item in [{title: '1', value: '1', name: 'team', value2: '1'}, {title: '2 - 4', value: '2 - 4', name: 'team'}, {title: '5 - 7', value: '5 - 7', name: 'team'}, {title: '8 - 10', value: '8 - 10', name: 'team'}, {title: '11 - 15', value: '11 - 15', name: 'team'}, {title: '16 - 20', value: '16 - 20', name: 'team'}, {title: '21 - 30', value: '21 - 30', name: 'team'}, {title: '31 +', value: '31 +', name: 'team', value2: '31 +'} ]
             +styled-radio(item.title)._team.__item
               +e.INPUT.input(type="radio", value=item.value, name=item.name, data-modal-item, data-modal-item-value=(item.value2 || item.value), data-modal-item-type="team")
     +e.fieldset
