--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -43,9 +43,9 @@ block content
             +e.head
               +page-title Search results and one space pages
             +e.list
-              +nd-link(href="space-v4.html") Spacepool - Space (space-v4.html)
-              +nd-link(href="search-v2.html") Spacepool - Search (search-v2.html)
-              +nd-link(href="search-types-v2.html") Spacepool - Search by offer type (search-types-v2.html)
+              +nd-link(href="search-v2.html") Spacepool - Search (without space overlay)(search-v2.html)
+              +nd-link(href="search-types-v2.html") Spacepool - Search by offer type (without space overlay)(search-types-v2.html)
+              //- +nd-link(href="space-v4.html") Spacepool - Space (space-v4.html)
           +e.group#nd-registration
             +e.head
               +page-title Registration Steps
