--- a/app/components/search-filter/nd-search-filter.scss
+++ b/app/components/search-filter/nd-search-filter.scss
@@ -167,6 +167,7 @@
 
     @include screen('sm', max, 2) {
       background-color: $nd-color-basic-light;
+      box-shadow: boxShadow(0, 2, 2, 0, rgba(0, 0, 0, .06), 375);
     }
 
     .nd-container {
