--- a/app/styles/helpers/_animations.scss
+++ b/app/styles/helpers/_animations.scss
@@ -99,3 +99,125 @@
     opacity: 1;
   }
 }
+
+// Animations for maps
+@keyframes map-hor-animation {
+  0% {
+    width: 41.51vw;
+  }
+
+  100% {
+    width: 100vw;
+  }
+}
+
+@keyframes map-hor-animation-lg {
+  0% {
+    width: 47.07vw;
+  }
+
+  100% {
+    width: 100vw;
+  }
+}
+
+@keyframes map-hor-animation-reverse {
+  0% {
+    width: 100vw;
+  }
+
+  100% {
+    width: 41.51vw;
+  }
+}
+
+@keyframes map-hor-animation-lg-reverse {
+  0% {
+    width: 100vw;
+  }
+
+  100% {
+    width: 47.07vw;
+  }
+}
+
+@keyframes map-vert-animation-md {
+  0% {
+    height: pxtovw(257, 960);
+  }
+
+  100% {
+    height: calc(100vh - (10600 / 960) * 1vw);
+  }
+}
+
+@keyframes map-vert-animation-sm {
+  0% {
+    height: pxtovw(208, 375);
+  }
+
+  100% {
+    height: calc(100vh - (6000 / 960) * 1vw);
+  }
+}
+
+@keyframes map-vert-animation-md-reverse {
+  0% {
+    height: calc(100vh - (10600 / 960) * 1vw);
+  }
+
+  100% {
+    height: pxtovw(257, 960);
+  }
+}
+
+@keyframes map-vert-animation-sm-reverse {
+  0% {
+    height: calc(100vh - (6000 / 960) * 1vw);
+  }
+
+  100% {
+    height: pxtovw(208, 375);
+  }
+}
+
+
+@keyframes map-gg-vert-animation-md {
+  0% {
+    height: pxtovw(257, 960);
+  }
+
+  100% {
+    height: calc(100% - (6600 / 960) * 1vw);
+  }
+}
+
+@keyframes map-gg-vert-animation-sm-reverse {
+  0% {
+    height: calc(100% - (6000 / 960) * 1vw);
+  }
+
+  100% {
+    height: pxtovw(208, 375);
+  }
+}
+
+@keyframes map-gg-vert-animation-md-reverse {
+  0% {
+    height: calc(100% - (6600 / 960) * 1vw);
+  }
+
+  100% {
+    height: pxtovw(257, 960);
+  }
+}
+
+@keyframes map-gg-vert-animation-sm {
+  0% {
+    height: pxtovw(208, 375);
+  }
+
+  100% {
+    height: calc(100% - (6000 / 960) * 1vw);
+  }
+}
