--- a/app/components/layout/layout.scss
+++ b/app/components/layout/layout.scss
@@ -43,7 +43,10 @@
       @include screen('md', max, 2) {
         position: sticky;
         top: 0;
-        grid-row: 2 / 3;
+        // grid-row: 2 / 3;
+        grid-row: 1 / 2;
+        background-color: transparent;
+        align-self: end;
         z-index: 2;
         transform: translate3d(0, 0, 0);
         will-change: top;
@@ -58,12 +61,14 @@
         z-index: 4;
 
         @include screen('md', max, 2) {
-          grid-row: 1 / 2;
+          // grid-row: 1 / 2;
+          align-self: start;
         }
       }
     }
 
     &_results {
+      position: relative;
       grid-column: 1 / 2;
       grid-row: 2 / 3;
       max-height: 100%;
@@ -71,6 +76,8 @@
       padding-left: 150px;
       box-sizing: border-box;
       background-color: $nd-color-bg;
+      transition: transform .5s ease-in-out;
+      z-index: 1;
 
       @include screen('xl', max, 2) {
         padding-left: 60px;
@@ -78,11 +85,16 @@
 
       @include screen('md', max, 2) {
         grid-column: 1 / 3;
-        grid-row: 3 / 4;
+        // grid-row: 3 / 4;
+        grid-row: 2 / 3;
         z-index: 1;
         max-height: none;
         height: auto;
         overflow: visible;
+      }
+
+      @include screen('sm', max, 2) {
+        grid-row: 3 / 4;
       }
 
       @include rule(padding-left, (xlg: 60, lg: 50, md: 50, sm: 20));
@@ -91,6 +103,14 @@
       @include rule(padding-bottom, (xl: 80px, xlg: 80, lg: 80, md: 80, sm: 80));
 
       @include native-scroll($nd-layout-scroll, transparent, 4, 7, 4);
+
+      .map-in-fullview & {
+        transform: translate3d(-100%, 0, 0);
+
+        @include screen('md', max, 2) {
+          transform: translate3d(0, 0, 0);
+        }
+      }
     }
 
     &_map {
@@ -98,7 +118,9 @@
       grid-row: 2 / 3;
       height: 100%;
       overflow: hidden;
-      transition: width $ease-main, height $ease-main;
+      justify-self: end;
+      // transition: width $ease-main, height 1s ease-in-out;
+      will-change: width, height;
 
       @include screen('md', max, 2) {
         grid-column: 1 / 3;
@@ -112,18 +134,57 @@
       @include rule(height, (md: 257, sm: 208));
 
       .map-in-fullview & {
-        z-index: 3;
+        // z-index: 3;
         grid-column: 1 / 3;
 
+        // @include screen('md', max, 2) {
+        //   height: calc(100vh - (10600 / 960) * 1vw);
+        //   // grid-row: 2 / 3;
+        // }
+
+        // @include screen('sm', max, 2) {
+        //   height: calc(100vh - (6000 / 375) * 1vw);
+        // }
+        animation: map-hor-animation .5s ease-in-out forwards 1;
+
+        @include screen('lg', max, 2) {
+          animation: map-hor-animation-lg .5s ease-in-out forwards 1;
+        }
+
         @include screen('md', max, 2) {
-          height: calc(100vh - (10600 / 960) * 1vw);
-          grid-row: 2 / 3;
+          animation: map-vert-animation-md .5s ease-in-out forwards 1;
         }
 
         @include screen('sm', max, 2) {
-          height: calc(100vh - (6000 / 960) * 1vw);
+          animation: map-vert-animation-sm .5s ease-in-out forwards 1;
         }
       }
+
+      .is-map-animated-out & {
+        animation: map-hor-animation-reverse .5s ease-in-out forwards 1;
+
+        @include screen('lg', max, 2) {
+          animation: map-hor-animation-lg-reverse .5s ease-in-out forwards 1;
+        }
+
+        @include screen('md', max, 2) {
+          animation: map-vert-animation-md-reverse .5s ease-in-out forwards;
+        }
+
+        @include screen('sm', max, 2) {
+          animation: map-vert-animation-sm-reverse .5s ease-in-out forwards;
+        }
+      }
+
+      // .is-map-animated-in & {
+      //   @include screen('md', max, 2) {
+      //     animation: map-vert-animation-md 1s ease-in-out forwards 1;
+      //   }
+
+      //   @include screen('sm', max, 2) {
+      //     animation: map-vert-animation-sm 1s ease-in-out forwards 1;
+      //   }
+      // }
     }
 
     &_start {
