--- a/app/pages/search/search-v2.pug
+++ b/app/pages/search/search-v2.pug
@@ -54,8 +54,8 @@ block content
 
     +e.column_start._popup(data-layout-tag="offer")
 
-  +modals('div')
-    +e.FORM.fieldset#search-filter(action="/")
+  +modals('FORM')#search-filter(action="/")
+    +e.FIELDSET.fieldset
       +modal({header: {title: 'Location'}, footer: false})#filter-location
         +e.list
           - var cityList = getData('nd-main-search-cities.json');
@@ -80,7 +80,7 @@ block content
           each item in [{title: '1', value: '1', name: 'team', value2: '1'}, {title: '2 - 4', value: '2 - 4', name: 'team'}, {title: '5 - 7', value: '5 - 7', name: 'team'}, {title: '8 - 10', value: '8 - 10', name: 'team'}, {title: '11 - 15', value: '11 - 15', name: 'team'}, {title: '16 - 20', value: '16 - 20', name: 'team'}, {title: '21 - 30', value: '21 - 30', name: 'team'}, {title: '31 +', value: '31 +', name: 'team', value2: '31 +'} ]
             +styled-radio(item.title)._team.__item
               +e.INPUT.input(type="radio", value=item.value, name=item.name, data-modal-item, data-modal-item-value=(item.value2 || item.value), data-modal-item-type="team")
-    +e.fieldset
+    +e.FIELDSET.fieldset
       +modal({header: {title: 'Price range'}, footer: {class: '_range', view: 'range'}})#filter-range
         +nd-range({output: {minLabel: 'Min', maxLabel: 'Max', max: 'maxPrice', min: 'minPrice', formboxClass: '_bg-white _sm-h50', inputClass: '_sm-h50'}})(data-start="[0, 5000]" data-connect="[false, true, false]" data-step="10" data-margin="30" data-min="0" data-max="10000" data-currency="£" data-modal-item data-modal-item-type="range").__range
       +modal({header: {title: 'Sort by'}, footer: false})#filter-sort
