special header with search-panel

--- a/app/blocks/logo/nd-logo.pug
+++ b/app/blocks/logo/nd-logo.pug
@@ -1,3 +1,7 @@
 mixin nd-logo(tag)
   +b(tag || 'a').nd-logo&attributes(attributes)
     +icon('nd-logo').icon
+
+mixin nd-logo-short(tag)
+  +b(tag || 'a').nd-logo_short&attributes(attributes)
+    +icon('logo-short').icon
