--- a/app/blocks/logo/nd-logo.scss
+++ b/app/blocks/logo/nd-logo.scss
@@ -114,4 +114,11 @@
       height: pxtovw(31, 375);
     }
   }
+
+  &_short {
+    @include rule(width, (xl: 38px, xlg: 38, lg: 38, md: 38, sm: 38));
+    @include rule(height, (xl: 38px, xlg: 38, lg: 38, md: 38, sm: 38));
+
+    color: $nd-color-logo;
+  }
 }
