--- a/app/blocks/modal-output/modal-output.scss
+++ b/app/blocks/modal-output/modal-output.scss
@@ -250,6 +250,11 @@
       z-index: 1;
     }
 
+    .nd-header &::before {
+      top: 0;
+      bottom: 0;
+    }
+
     &:hover {
       body:not(.is-touched-device) & {
         &::before {
